# Proyecto-I-Programaci-n-

./: .gitignore  CMakeLists.txt  README.md  estudiantes.h  main.cpp
interfaces/DTOs/: Asignacion.h
interfaces/UI/: ui.h
interfaces/controller/: AsignarController.h  EstudianteController.h  ProfesorController.h
interfaces/controllers/: ProfesorController.h
interfaces/models/: Estudiante.h  Profesor.h
interfaces/repository/: AsignacionesRepository.h  EstudianteRepository.h  ProfesorRepository.h
interfaces/services/: AsignarService.h  EstudianteService.h  ProfesorService.h
src/UI/: ui.cpp
src/controller/: AsignarController.cpp  EstudianteController.cpp  ProfesorController.cpp
src/controllers/: ProfesorController.cpp
src/models/: Estudiante.cpp  Profesor.cpp
src/repository/: AsignacionesRepository.cpp  EstudianteRepository.cpp  ProfesorRepository.cpp
src/services/: AsignarService.cpp  EstudianteService.cpp  ProfesorService.cpp
src/utils/: Cursos.cpp  Cursos.h
